Update work history

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="business-card">
       <div class="intro">
         <span class="name">Sam Ling</span>
-        <span class="subfont">Software Engineer, Full-stack</span>
+        <span class="subfont">Software Engineer, Google</span>
       </div>
 
       <div class="contact">
