Update with Google and Sharist.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Experienced with HTML, JavaScript/Node.js, React, TypeScript, CSS
+          Experienced with HTML, JavaScript/Node.js, React, Angular, TypeScript, CSS
         </li>
         <li class="detail">
           Proficient with Java, Kotlin, SQL/NoSQL, Bash; knowledge of C/C++
