Add Snap and make update work renderer to support links.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="business-card">
       <div class="intro">
         <span class="name">Sam Ling</span>
-        <span class="subfont">Software Engineer, Google</span>
+        <span class="subfont">Senior Software Engineer | Snap, Inc.</span>
       </div>
 
       <div class="contact">
@@ -58,7 +58,7 @@
           Proficient with Java, Kotlin, SQL/NoSQL, Bash; knowledge of C/C++
         </li>
         <li class="detail">
-          Advises system designs and lead engineer for full-stack projects
+          Passionate about delivering positive impact through great user experiences
         </li>
       </ul>
     </section>
@@ -74,8 +74,8 @@
       </script>
     </section>
 
-    <hr class="printHide" />
-    <div class="printBreak"></div>
+    <hr class="print-hide"/>
+    <div class="page-break"></div>
 
     <section id="projects">
       <h1>Projects</h1>
