Update resume to reflect engineering manager role

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="business-card">
       <div class="intro">
         <span class="name">Sam Ling</span>
-        <span class="subfont">Senior Software Engineer | Snap, Inc.</span>
+        <span class="subfont">Engineering Manager | Snap, Inc.</span>
       </div>
 
       <div class="contact">
@@ -52,10 +52,10 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Experienced with HTML, JavaScript/Node.js, React, Angular, TypeScript, CSS
+          Manager of 8 engineers across two disciplines with different stakeholders and target audiences
         </li>
         <li class="detail">
-          Proficient with Java, Kotlin, SQL/NoSQL, Bash; knowledge of C/C++
+          Proficient in React, Angular, TypeScript, Java, Golang, SQL; experiences in designing large-scale systems used by millions of users
         </li>
         <li class="detail">
           Passionate about delivering positive impact through great user experiences
@@ -74,8 +74,8 @@
       </script>
     </section>
 
-    <hr class="print-hide"/>
-    <div class="page-break"></div>
+    <hr />
+    <!-- <div class="page-break"></div> -->
 
     <section id="projects">
       <h1>Projects</h1>
