--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Manager of 9 engineers across two disciplines with different stakeholders and target audiences
+          Manager of a full-stack team supporting two product domains
         </li>
         <li class="detail">
           Proficient in React, Angular, TypeScript, Java, Golang, SQL; experiences in designing large-scale systems used by millions of users
