--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Manager of a full-stack team supporting three product domains
+          Manager of full-stack and backend supporting multiple product domains
         </li>
         <li class="detail">
           Proficient in React, Angular, TypeScript, Java, Golang, SQL; experiences in designing large-scale systems used by millions of users
@@ -97,7 +97,7 @@
       </script>
     </section>
 
-    <hr />
+    <!-- <hr />
 
     <section class="activities">
       <h1>Activities and Interests</h1>
@@ -106,6 +106,6 @@
       <script>
         renderActivities("activities-contents");
       </script>
-    </section>
+    </section> -->
   </body>
 </html>
