--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Manager of full-stack and backend supporting multiple product domains
+          Manager of frontend and backend teams supporting multiple product domains in Safety Engineering
         </li>
         <li class="detail">
-          Proficient in React, Angular, TypeScript, Java, Golang, SQL; experiences in designing large-scale systems used by millions of users
+          Proficient in React, TypeScript, Java, Golang, SQL; experienced in designing large-scale systems used by millions of users
         </li>
         <li class="detail">
           Passionate about delivering positive impact through great user experiences
