--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1>Highlights</h1>
       <ul class="details">
         <li class="detail">
-          Manager of frontend and backend teams supporting multiple product domains in Safety Engineering
+          Manager of frontend and backend teams supporting multiple product domains
         </li>
         <li class="detail">
           Proficient in React, TypeScript, Java, Golang, SQL; experienced in designing large-scale systems used by millions of users
